        In preparation for https://bugs.webkit.org/show_bug.cgi?id=27236:         Remove TCMALLOC_TRACK_DECOMMITED_SPANS.  We'll always track decommitted spans.         We have tested this and show it has little impact on performance.

Reviewed by Mark Rowe.

        * wtf/FastMalloc.cpp:
        (WTF::TCMalloc_PageHeap::New):
        (WTF::TCMalloc_PageHeap::AllocLarge):
        (WTF::propagateDecommittedState):
        (WTF::mergeDecommittedStates):
        (WTF::TCMalloc_PageHeap::Delete):
        (WTF::TCMalloc_PageHeap::IncrementalScavenge):



Canonical link: https://commits.webkit.org/37997@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46387 268f45cc-cd09-0410-ab3c-d52691b4dbfc